# delaunay-mesh-generator

./: .gitignore  CMakeLists.txt  README.md
doc/: CMakeLists.txt  Doxyfile.in
meshes/: 1Dmesh.mesh  bump.mesh  carre.mesh
meshes/input/: holy_square.geo  holy_square1D.mesh  kettle.geo  kettle1D.mesh  not_convex.geo  not_convex1D.mesh  square.geo  square1D.mesh  square_point.geo  square_point1D.mesh
meshes/output/: holy_square.mesh  holy_square.sol  kettle.mesh  kettle.sol  kettle_bdy_gmsh.mesh  kettle_gmsh.mesh  not_convex.mesh  not_convex.sol  not_convex1.mesh  not_convex1.sol  not_convex_gmsh.mesh  square.mesh  square.sol  square_point.mesh  square_point.sol
src/: ball_dmg.c  cavity_dmg.c  delaunay_dmg.c  dmg.c  dmg.h  dmgversion.h  dmgversion.h.in  domains_dmg.c  enforcement_dmg.c  geom_dmg.c  grid_dmg.c  hash_dmg.c  inout_dmg.c  local_dmg.c  locate_dmg.c  memory_dmg.c  quality_dmg.c  queue_dmg.c  types_dmg.h
